fixed invisible navbar bug

--- a/src/css/parallax.css
+++ b/src/css/parallax.css
@@ -180,7 +180,7 @@ h1{
 
 @media only screen and (max-width: 1200px) {
     .terminalBtn{
-        padding: 5px;
+        padding: 8px;
         font-size: 16px;
     }
 
@@ -206,7 +206,7 @@ h1{
         margin-left: 8px;
         margin-right: 8px;
         margin-top: 0px;
-        font-size: 12px;
+        font-size: 14px;
     }
     .with-side-nav{
         margin-left: 10vw;
