--- a/src/css/tlNav.css
+++ b/src/css/tlNav.css
@@ -7,6 +7,8 @@
     top:0;
     position: fixed;
     z-index: 2;
+    width: 0;
+    height: 0;
     overflow: hidden;
 }
 
